--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,6 @@ FodyWeavers.xsd
 *.sln.iml
 
 #ejecutbales de c
+
+#resultados.txt
+clases/Algoritmos y Estructuras de Datos 2/Lab02/ej4/resultados.txt
